// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getLegacyPool > does not fetch Prime distributions if user is not Prime 1`] = `
{
  "pool": {
    "assets": [
      {
        "borrowApyPercentage": "2.020093454326921",
        "borrowBalanceCents": "1531484732509246.5984849465",
        "borrowBalanceTokens": "15314985159958.905615",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "0.000004204786496764",
            "dailyDistributedTokens": "499.9999968",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
          {
            "apyPercentage": "0.20019958435848473",
            "referenceValues": {
              "userBorrowBalanceTokens": "2405.43",
              "userSupplyBalanceTokens": "13068.75",
              "userXvsStakedTokens": "3265.3",
            },
            "token": {
              "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
              "asset": "/src/libs/tokens/img/usdc.svg",
              "decimals": 6,
              "symbol": "USDC",
            },
            "type": "primeSimulation",
          },
        ],
        "borrowPercentageRatePerBlock": "1.902601834e-9",
        "borrowerCount": 232,
        "cashTokens": "10177700134473657708.145832",
        "collateralFactor": 0.81,
        "exchangeRateVTokens": "47.12928160687045990827",
        "isCollateralOfUser": true,
        "liquidityCents": "1.0177608535172447445226458687512e+21",
        "reserveFactor": 0.1,
        "reserveTokens": "895077567957714.356605",
        "supplierCount": 638,
        "supplyApyPercentage": "0.000002707894064535",
        "supplyBalanceCents": "1.017672878050748282876538601630879295798481873e+21",
        "supplyBalanceTokens": "10176820371890829846.23400212232789390903",
        "supplyCapTokens": undefined,
        "supplyDistributions": [
          {
            "apyPercentage": "8.104628e-12",
            "dailyDistributedTokens": "499.9999968",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
          {
            "apyPercentage": "0.23026397657694986",
            "referenceValues": {
              "userBorrowBalanceTokens": "2405.43",
              "userSupplyBalanceTokens": "13068.75",
              "userXvsStakedTokens": "3265.3",
            },
            "token": {
              "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
              "asset": "/src/libs/tokens/img/usdc.svg",
              "decimals": 6,
              "symbol": "USDC",
            },
            "type": "primeSimulation",
          },
        ],
        "supplyPercentageRatePerBlock": "2.576e-15",
        "tokenPriceCents": "99.9991",
        "userBorrowBalanceCents": "1025.9446664149",
        "userBorrowBalanceTokens": "10.259539",
        "userPercentOfLimit": 0,
        "userSupplyBalanceCents": "0",
        "userSupplyBalanceTokens": "0",
        "userWalletBalanceCents": "2132727770.8442098979",
        "userWalletBalanceTokens": "21327469.655669",
        "vToken": {
          "address": "0xD5C4C2e2facBEB59D0216D0595d63FcDc6F9A1a7",
          "decimals": 8,
          "symbol": "vUSDC",
          "underlyingToken": {
            "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
            "asset": "/src/libs/tokens/img/usdc.svg",
            "decimals": 6,
            "symbol": "USDC",
          },
        },
      },
      {
        "borrowApyPercentage": "2.0200781032592374",
        "borrowBalanceCents": "3485089196.568960612289",
        "borrowBalanceTokens": "34852739.509411",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "1.8648777370665615",
            "dailyDistributedTokens": "499.9999968",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
          {
            "apyPercentage": "0.20019958435848473",
            "referenceValues": {
              "userBorrowBalanceTokens": "10009.21",
              "userSupplyBalanceTokens": "5003.94",
              "userXvsStakedTokens": "3731.33",
            },
            "token": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
            "type": "primeSimulation",
          },
        ],
        "borrowPercentageRatePerBlock": "1.902587519e-9",
        "borrowerCount": 315,
        "cashTokens": "1.0000736633870942714346486469034873074965e+34",
        "collateralFactor": 0.8,
        "exchangeRateVTokens": "49.8066352191466231613",
        "isCollateralOfUser": false,
        "liquidityCents": "1.000020649482198121567319896178714953634329610535e+36",
        "reserveFactor": 0.1,
        "reserveTokens": "90239.46739",
        "supplierCount": 736,
        "supplyApyPercentage": "0",
        "supplyBalanceCents": "1.0000206494821981215674308946489344879323086222609070040463539e+36",
        "supplyBalanceTokens": "1.00007366338709427143475965125804767703966849508783161e+34",
        "supplyCapTokens": undefined,
        "supplyDistributions": [
          {
            "apyPercentage": "0",
            "dailyDistributedTokens": "499.9999968",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
          {
            "apyPercentage": "0.23026397657694986",
            "referenceValues": {
              "userBorrowBalanceTokens": "10009.21",
              "userSupplyBalanceTokens": "5003.94",
              "userXvsStakedTokens": "3731.33",
            },
            "token": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
            "type": "primeSimulation",
          },
        ],
        "supplyPercentageRatePerBlock": "0",
        "tokenPriceCents": "99.994699",
        "userBorrowBalanceCents": "2910453779.083287189529",
        "userBorrowBalanceTokens": "29106080.704171",
        "userPercentOfLimit": 20.88,
        "userSupplyBalanceCents": "0",
        "userSupplyBalanceTokens": "0",
        "userWalletBalanceCents": "9.99936990530102198515010885786122152e+23",
        "userWalletBalanceTokens": "9.999900000000021986315603448e+21",
        "vToken": {
          "address": "0xb7526572FFE56AB9D7489838Bf2E18e3323b441A",
          "decimals": 8,
          "symbol": "vUSDT",
          "underlyingToken": {
            "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
            "asset": "/src/libs/tokens/img/usdt.svg",
            "decimals": 6,
            "symbol": "USDT",
          },
        },
      },
      {
        "borrowApyPercentage": "2.0200781054088957",
        "borrowBalanceCents": "24169165020757.008441931257037560073982",
        "borrowBalanceTokens": "241756764974.648356207573518227",
        "borrowCapTokens": "1e-18",
        "borrowDistributions": [
          {
            "apyPercentage": "0",
            "dailyDistributedTokens": "0",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
          {
            "apyPercentage": "0.20019958435848473",
            "referenceValues": {
              "userBorrowBalanceTokens": "453577420.21510010545510979029",
              "userSupplyBalanceTokens": "447427293535420150.537063455989777353",
              "userXvsStakedTokens": "1000",
            },
            "token": {
              "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
              "asset": "/src/libs/tokens/img/busd.svg",
              "decimals": 18,
              "symbol": "BUSD",
            },
            "type": "primeSimulation",
          },
        ],
        "borrowPercentageRatePerBlock": "1.902587521e-9",
        "borrowerCount": 533,
        "cashTokens": "1.00000000081005191374669097434774150829e+21",
        "collateralFactor": 0.8,
        "exchangeRateVTokens": "49.19405324154271215086",
        "isCollateralOfUser": true,
        "liquidityCents": "9.997306608098337343642424406007106875921571714e+22",
        "reserveFactor": 1,
        "reserveTokens": "144641814.793335107336610818",
        "supplierCount": 2235,
        "supplyApyPercentage": "0",
        "supplyBalanceCents": "9.997306610513807812587592904169392833357345287278e+22",
        "supplyBalanceTokens": "1.00000000105166403645033682413715238395883e+21",
        "supplyCapTokens": "0",
        "supplyDistributions": [
          {
            "apyPercentage": "0",
            "dailyDistributedTokens": "0",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
          {
            "apyPercentage": "0.23026397657694986",
            "referenceValues": {
              "userBorrowBalanceTokens": "453577420.21510010545510979029",
              "userSupplyBalanceTokens": "447427293535420150.537063455989777353",
              "userXvsStakedTokens": "1000",
            },
            "token": {
              "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
              "asset": "/src/libs/tokens/img/busd.svg",
              "decimals": 18,
              "symbol": "BUSD",
            },
            "type": "primeSimulation",
          },
        ],
        "supplyPercentageRatePerBlock": "0",
        "tokenPriceCents": "99.973066",
        "userBorrowBalanceCents": "1338837412.548739840355458352155454",
        "userBorrowBalanceTokens": "13391981.121682712425319219",
        "userPercentOfLimit": 9.6,
        "userSupplyBalanceCents": "9998773841.247562211290167508487802",
        "userSupplyBalanceTokens": "100014676.365407881071589497",
        "userWalletBalanceCents": "991176944992.458190249853510306844198",
        "userWalletBalanceTokens": "9914439805.141698767644612503",
        "vToken": {
          "address": "0x08e0A5575De71037aE36AbfAfb516595fE68e5e4",
          "decimals": 8,
          "symbol": "vBUSD",
          "underlyingToken": {
            "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
            "asset": "/src/libs/tokens/img/busd.svg",
            "decimals": 18,
            "symbol": "BUSD",
          },
        },
      },
      {
        "borrowApyPercentage": "115.47009997593621",
        "borrowBalanceCents": "9021918820.590883118756440045847812",
        "borrowBalanceTokens": "420107.243695434405914978",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "2.164334566357984",
            "dailyDistributedTokens": "1499.9999904",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "7.3103099209e-8",
        "borrowerCount": 261,
        "cashTokens": "0.105662880026401893",
        "collateralFactor": 0.8,
        "exchangeRateVTokens": "12.34263792471376930792",
        "isCollateralOfUser": true,
        "liquidityCents": "2269.139464396223447322223722",
        "reserveFactor": 0.25,
        "reserveTokens": "34415.359297941913897345",
        "supplierCount": 1700,
        "supplyApyPercentage": "87.24219968627402",
        "supplyBalanceCents": "8282841765.51712892855171530689666104",
        "supplyBalanceTokens": "385691.99006037251840106076",
        "supplyCapTokens": undefined,
        "supplyDistributions": [
          {
            "apyPercentage": "2.3597132480044802",
            "dailyDistributedTokens": "1499.9999904",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "5.9719560501e-8",
        "tokenPriceCents": "21475.275554",
        "userBorrowBalanceCents": "1507200562.34337075516290466079759",
        "userBorrowBalanceTokens": "70183.060447978210615835",
        "userPercentOfLimit": 10.81,
        "userSupplyBalanceCents": "7153834234.921780428502293762497558",
        "userSupplyBalanceTokens": "333119.554947424281534427",
        "userWalletBalanceCents": "804.0192840488722",
        "userWalletBalanceTokens": "0.0374393",
        "vToken": {
          "address": "0x2E7222e51c0f6e98610A1543Aa3836E092CDe62c",
          "decimals": 8,
          "symbol": "vBNB",
          "underlyingToken": {
            "address": "0x0000000000000000000000000000000000000000",
            "asset": "/src/libs/tokens/img/bnb.svg",
            "decimals": 18,
            "isNative": true,
            "symbol": "BNB",
          },
        },
      },
      {
        "borrowApyPercentage": "14.678237213106993",
        "borrowBalanceCents": "127494789.976725601230307532916064",
        "borrowBalanceTokens": "361325.374254367115070152",
        "borrowCapTokens": "270000",
        "borrowDistributions": [
          {
            "apyPercentage": "0",
            "dailyDistributedTokens": "0",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "1.3031372027e-8",
        "borrowerCount": 77,
        "cashTokens": "2300786.088596467449092226",
        "collateralFactor": 0.6,
        "exchangeRateVTokens": "48.11796090116306607589",
        "isCollateralOfUser": true,
        "liquidityCents": "811839577.423293023548242500951832",
        "reserveFactor": 0.25,
        "reserveTokens": "24426.24486633871943155",
        "supplierCount": 326,
        "supplyApyPercentage": "1.4173055905260634",
        "supplyBalanceCents": "930715490.39593208582245151364324",
        "supplyBalanceTokens": "2637685.21798449584350707",
        "supplyCapTokens": undefined,
        "supplyDistributions": [
          {
            "apyPercentage": "0",
            "dailyDistributedTokens": "0",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "1.338834523e-9",
        "tokenPriceCents": "352.853132",
        "userBorrowBalanceCents": "0",
        "userBorrowBalanceTokens": "0",
        "userPercentOfLimit": 0,
        "userSupplyBalanceCents": "358170693.46469177600488881036144",
        "userSupplyBalanceTokens": "1015070.18354790110239092",
        "userWalletBalanceCents": "1974853275.785316380184811695133004",
        "userWalletBalanceTokens": "5596813.792162446726375697",
        "vToken": {
          "address": "0x6d6F697e34145Bb95c54E77482d97cc261Dc237E",
          "decimals": 8,
          "symbol": "vXVS",
          "underlyingToken": {
            "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
            "asset": "/src/libs/tokens/img/xvs.svg",
            "decimals": 18,
            "symbol": "XVS",
          },
        },
      },
      {
        "borrowApyPercentage": "12.929398759456245",
        "borrowBalanceCents": "2189606786.6192461112257626",
        "borrowBalanceTokens": "13355.332641776432517388",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "1.4813202523229263",
            "dailyDistributedTokens": "250.0000128",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "1.1568959578e-8",
        "borrowerCount": 51,
        "cashTokens": "0.862760988737629408",
        "collateralFactor": 0.8,
        "exchangeRateVTokens": "41.89012550143102255692",
        "isCollateralOfUser": false,
        "liquidityCents": "141449.6641035343414416",
        "reserveFactor": 0.1,
        "reserveTokens": "212.852150854368890484",
        "supplierCount": 211,
        "supplyApyPercentage": "11.761843113429581",
        "supplyBalanceCents": "2154851126.1507758655837335175",
        "supplyBalanceTokens": "13143.34325191080125394165",
        "supplyCapTokens": undefined,
        "supplyDistributions": [
          {
            "apyPercentage": "1.5053909671967736",
            "dailyDistributedTokens": "250.0000128",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "1.0580000116e-8",
        "tokenPriceCents": "163950",
        "userBorrowBalanceCents": "4183840.15655389583477625",
        "userBorrowBalanceTokens": "25.519000649917022475",
        "userPercentOfLimit": 0.03,
        "userSupplyBalanceCents": "0",
        "userSupplyBalanceTokens": "0",
        "userWalletBalanceCents": "14100032453.0672534166492135",
        "userWalletBalanceTokens": "86002.02777107199400213",
        "vToken": {
          "address": "0x162D005F0Fff510E54958Cfc5CF32A3180A84aab",
          "decimals": 8,
          "symbol": "vETH",
          "underlyingToken": {
            "address": "0x98f7A83361F7Ac8765CcEBAB1425da6b341958a7",
            "asset": "/src/libs/tokens/img/eth.svg",
            "decimals": 18,
            "isNative": true,
            "symbol": "ETH",
          },
        },
      },
      {
        "borrowApyPercentage": "4.99318031366e-7",
        "borrowBalanceCents": "1.00013156763973925145e-14",
        "borrowBalanceTokens": "100.013156763973925145",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "1000000",
            "dailyDistributedTokens": "25.0000000000000128",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "4.75e-16",
        "borrowerCount": 2,
        "cashTokens": "1000014902.000227060658744583",
        "collateralFactor": 0,
        "exchangeRateVTokens": "49.8409052160961750676",
        "isCollateralOfUser": false,
        "liquidityCents": "1.000014902000227060658744583e-7",
        "reserveFactor": 0.2,
        "reserveTokens": "0.002676765141333725",
        "supplierCount": 5,
        "supplyApyPercentage": "0",
        "supplyBalanceCents": "1.00001500201070705929733581893e-7",
        "supplyBalanceTokens": "1000015002.01070705929733581893",
        "supplyCapTokens": "0",
        "supplyDistributions": [
          {
            "apyPercentage": "1000000",
            "dailyDistributedTokens": "25.0000000000000128",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "0",
        "tokenPriceCents": "1e-16",
        "userBorrowBalanceCents": "0",
        "userBorrowBalanceTokens": "0",
        "userPercentOfLimit": 0,
        "userSupplyBalanceCents": "0",
        "userSupplyBalanceTokens": "0",
        "userWalletBalanceCents": "0",
        "userWalletBalanceTokens": "0",
        "vToken": {
          "address": "0xF206af85BC2761c4F876d27Bd474681CfB335EfA",
          "decimals": 8,
          "symbol": "vUST",
          "underlyingToken": {
            "address": "0x5A79efD958432E72211ee73D5DDFa9bc8f248b5F",
            "asset": "/src/libs/tokens/img/ust.svg",
            "decimals": 18,
            "symbol": "UST",
          },
        },
      },
      {
        "borrowApyPercentage": "2.0200781032592374",
        "borrowBalanceCents": "0",
        "borrowBalanceTokens": "0",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "1000000",
            "dailyDistributedTokens": "37.5000000000000192",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "1.902587519e-9",
        "borrowerCount": 0,
        "cashTokens": "10103376",
        "collateralFactor": 0,
        "exchangeRateVTokens": "0.5",
        "isCollateralOfUser": false,
        "liquidityCents": "1.0103376e-9",
        "reserveFactor": 0.25,
        "reserveTokens": "0",
        "supplierCount": 3,
        "supplyApyPercentage": "0",
        "supplyBalanceCents": "1.0103376e-9",
        "supplyBalanceTokens": "10103376",
        "supplyCapTokens": "0",
        "supplyDistributions": [
          {
            "apyPercentage": "1000000",
            "dailyDistributedTokens": "37.5000000000000192",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "0",
        "tokenPriceCents": "1e-16",
        "userBorrowBalanceCents": "0",
        "userBorrowBalanceTokens": "0",
        "userPercentOfLimit": 0,
        "userSupplyBalanceCents": "0",
        "userSupplyBalanceTokens": "0",
        "userWalletBalanceCents": "0",
        "userWalletBalanceTokens": "0",
        "vToken": {
          "address": "0x9C3015191d39cF1930F92EB7e7BCbd020bCA286a",
          "decimals": 8,
          "symbol": "vLUNA",
          "underlyingToken": {
            "address": "0xf36160EC62E3B191EA375dadfe465E8Fa1F8CabB",
            "asset": "/src/libs/tokens/img/luna.svg",
            "decimals": 6,
            "symbol": "LUNA",
          },
        },
      },
    ],
    "comptrollerAddress": "0xa258a693A403b7e98fd05EE9e1558C760308cFC7",
    "description": "Fake pool description",
    "isIsolated": false,
    "name": "Fake pool name",
    "userBorrowBalanceCents": "5760676620.076618095782139262953044",
    "userBorrowLimitCents": "13936988877.014289177436902303005152",
    "userSupplyBalanceCents": "17510778769.6340344157973500813468",
  },
}
`;

exports[`getLegacyPool > fetches and formats Prime distributions and Prime distribution simulations if user is Prime 1`] = `
{
  "pool": {
    "assets": [
      {
        "borrowApyPercentage": "2.020093454326921",
        "borrowBalanceCents": "1531484732509246.5984849465",
        "borrowBalanceTokens": "15314985159958.905615",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "0.000004204786496764",
            "dailyDistributedTokens": "499.9999968",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
          {
            "apyPercentage": "0.32051113933926345",
            "token": {
              "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
              "asset": "/src/libs/tokens/img/usdc.svg",
              "decimals": 6,
              "symbol": "USDC",
            },
            "type": "prime",
          },
          {
            "apyPercentage": "0.20019958435848473",
            "referenceValues": {
              "userBorrowBalanceTokens": "2405.43",
              "userSupplyBalanceTokens": "13068.75",
              "userXvsStakedTokens": "3265.3",
            },
            "token": {
              "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
              "asset": "/src/libs/tokens/img/usdc.svg",
              "decimals": 6,
              "symbol": "USDC",
            },
            "type": "primeSimulation",
          },
        ],
        "borrowPercentageRatePerBlock": "1.902601834e-9",
        "borrowerCount": 232,
        "cashTokens": "10177700134473657708.145832",
        "collateralFactor": 0.81,
        "exchangeRateVTokens": "47.12928160687045990827",
        "isCollateralOfUser": true,
        "liquidityCents": "1.0177608535172447445226458687512e+21",
        "reserveFactor": 0.1,
        "reserveTokens": "895077567957714.356605",
        "supplierCount": 638,
        "supplyApyPercentage": "0.000002707894064535",
        "supplyBalanceCents": "1.017672878050748282876538601630879295798481873e+21",
        "supplyBalanceTokens": "10176820371890829846.23400212232789390903",
        "supplyCapTokens": undefined,
        "supplyDistributions": [
          {
            "apyPercentage": "8.104628e-12",
            "dailyDistributedTokens": "499.9999968",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
          {
            "apyPercentage": "0.2904197513866391",
            "token": {
              "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
              "asset": "/src/libs/tokens/img/usdc.svg",
              "decimals": 6,
              "symbol": "USDC",
            },
            "type": "prime",
          },
          {
            "apyPercentage": "0.23026397657694986",
            "referenceValues": {
              "userBorrowBalanceTokens": "2405.43",
              "userSupplyBalanceTokens": "13068.75",
              "userXvsStakedTokens": "3265.3",
            },
            "token": {
              "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
              "asset": "/src/libs/tokens/img/usdc.svg",
              "decimals": 6,
              "symbol": "USDC",
            },
            "type": "primeSimulation",
          },
        ],
        "supplyPercentageRatePerBlock": "2.576e-15",
        "tokenPriceCents": "99.9991",
        "userBorrowBalanceCents": "1025.9446664149",
        "userBorrowBalanceTokens": "10.259539",
        "userPercentOfLimit": 0,
        "userSupplyBalanceCents": "0",
        "userSupplyBalanceTokens": "0",
        "userWalletBalanceCents": "2132727770.8442098979",
        "userWalletBalanceTokens": "21327469.655669",
        "vToken": {
          "address": "0xD5C4C2e2facBEB59D0216D0595d63FcDc6F9A1a7",
          "decimals": 8,
          "symbol": "vUSDC",
          "underlyingToken": {
            "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
            "asset": "/src/libs/tokens/img/usdc.svg",
            "decimals": 6,
            "symbol": "USDC",
          },
        },
      },
      {
        "borrowApyPercentage": "2.0200781032592374",
        "borrowBalanceCents": "3485089196.568960612289",
        "borrowBalanceTokens": "34852739.509411",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "1.8648777370665615",
            "dailyDistributedTokens": "499.9999968",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
          {
            "apyPercentage": "0.32051113933926345",
            "token": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
            "type": "prime",
          },
          {
            "apyPercentage": "0.20019958435848473",
            "referenceValues": {
              "userBorrowBalanceTokens": "10009.21",
              "userSupplyBalanceTokens": "5003.94",
              "userXvsStakedTokens": "3731.33",
            },
            "token": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
            "type": "primeSimulation",
          },
        ],
        "borrowPercentageRatePerBlock": "1.902587519e-9",
        "borrowerCount": 315,
        "cashTokens": "1.0000736633870942714346486469034873074965e+34",
        "collateralFactor": 0.8,
        "exchangeRateVTokens": "49.8066352191466231613",
        "isCollateralOfUser": false,
        "liquidityCents": "1.000020649482198121567319896178714953634329610535e+36",
        "reserveFactor": 0.1,
        "reserveTokens": "90239.46739",
        "supplierCount": 736,
        "supplyApyPercentage": "0",
        "supplyBalanceCents": "1.0000206494821981215674308946489344879323086222609070040463539e+36",
        "supplyBalanceTokens": "1.00007366338709427143475965125804767703966849508783161e+34",
        "supplyCapTokens": undefined,
        "supplyDistributions": [
          {
            "apyPercentage": "0",
            "dailyDistributedTokens": "499.9999968",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
          {
            "apyPercentage": "0.2904197513866391",
            "token": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
            "type": "prime",
          },
          {
            "apyPercentage": "0.23026397657694986",
            "referenceValues": {
              "userBorrowBalanceTokens": "10009.21",
              "userSupplyBalanceTokens": "5003.94",
              "userXvsStakedTokens": "3731.33",
            },
            "token": {
              "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
              "asset": "/src/libs/tokens/img/usdt.svg",
              "decimals": 6,
              "symbol": "USDT",
            },
            "type": "primeSimulation",
          },
        ],
        "supplyPercentageRatePerBlock": "0",
        "tokenPriceCents": "99.994699",
        "userBorrowBalanceCents": "2910453779.083287189529",
        "userBorrowBalanceTokens": "29106080.704171",
        "userPercentOfLimit": 20.88,
        "userSupplyBalanceCents": "0",
        "userSupplyBalanceTokens": "0",
        "userWalletBalanceCents": "9.99936990530102198515010885786122152e+23",
        "userWalletBalanceTokens": "9.999900000000021986315603448e+21",
        "vToken": {
          "address": "0xb7526572FFE56AB9D7489838Bf2E18e3323b441A",
          "decimals": 8,
          "symbol": "vUSDT",
          "underlyingToken": {
            "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
            "asset": "/src/libs/tokens/img/usdt.svg",
            "decimals": 6,
            "symbol": "USDT",
          },
        },
      },
      {
        "borrowApyPercentage": "2.0200781054088957",
        "borrowBalanceCents": "24169165020757.008441931257037560073982",
        "borrowBalanceTokens": "241756764974.648356207573518227",
        "borrowCapTokens": "1e-18",
        "borrowDistributions": [
          {
            "apyPercentage": "0",
            "dailyDistributedTokens": "0",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
          {
            "apyPercentage": "0.32051113933926345",
            "token": {
              "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
              "asset": "/src/libs/tokens/img/busd.svg",
              "decimals": 18,
              "symbol": "BUSD",
            },
            "type": "prime",
          },
          {
            "apyPercentage": "0.20019958435848473",
            "referenceValues": {
              "userBorrowBalanceTokens": "453577420.21510010545510979029",
              "userSupplyBalanceTokens": "447427293535420150.537063455989777353",
              "userXvsStakedTokens": "1000",
            },
            "token": {
              "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
              "asset": "/src/libs/tokens/img/busd.svg",
              "decimals": 18,
              "symbol": "BUSD",
            },
            "type": "primeSimulation",
          },
        ],
        "borrowPercentageRatePerBlock": "1.902587521e-9",
        "borrowerCount": 533,
        "cashTokens": "1.00000000081005191374669097434774150829e+21",
        "collateralFactor": 0.8,
        "exchangeRateVTokens": "49.19405324154271215086",
        "isCollateralOfUser": true,
        "liquidityCents": "9.997306608098337343642424406007106875921571714e+22",
        "reserveFactor": 1,
        "reserveTokens": "144641814.793335107336610818",
        "supplierCount": 2235,
        "supplyApyPercentage": "0",
        "supplyBalanceCents": "9.997306610513807812587592904169392833357345287278e+22",
        "supplyBalanceTokens": "1.00000000105166403645033682413715238395883e+21",
        "supplyCapTokens": "0",
        "supplyDistributions": [
          {
            "apyPercentage": "0",
            "dailyDistributedTokens": "0",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
          {
            "apyPercentage": "0.2904197513866391",
            "token": {
              "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
              "asset": "/src/libs/tokens/img/busd.svg",
              "decimals": 18,
              "symbol": "BUSD",
            },
            "type": "prime",
          },
          {
            "apyPercentage": "0.23026397657694986",
            "referenceValues": {
              "userBorrowBalanceTokens": "453577420.21510010545510979029",
              "userSupplyBalanceTokens": "447427293535420150.537063455989777353",
              "userXvsStakedTokens": "1000",
            },
            "token": {
              "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
              "asset": "/src/libs/tokens/img/busd.svg",
              "decimals": 18,
              "symbol": "BUSD",
            },
            "type": "primeSimulation",
          },
        ],
        "supplyPercentageRatePerBlock": "0",
        "tokenPriceCents": "99.973066",
        "userBorrowBalanceCents": "1338837412.548739840355458352155454",
        "userBorrowBalanceTokens": "13391981.121682712425319219",
        "userPercentOfLimit": 9.6,
        "userSupplyBalanceCents": "9998773841.247562211290167508487802",
        "userSupplyBalanceTokens": "100014676.365407881071589497",
        "userWalletBalanceCents": "991176944992.458190249853510306844198",
        "userWalletBalanceTokens": "9914439805.141698767644612503",
        "vToken": {
          "address": "0x08e0A5575De71037aE36AbfAfb516595fE68e5e4",
          "decimals": 8,
          "symbol": "vBUSD",
          "underlyingToken": {
            "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
            "asset": "/src/libs/tokens/img/busd.svg",
            "decimals": 18,
            "symbol": "BUSD",
          },
        },
      },
      {
        "borrowApyPercentage": "115.47009997593621",
        "borrowBalanceCents": "9021918820.590883118756440045847812",
        "borrowBalanceTokens": "420107.243695434405914978",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "2.164334566357984",
            "dailyDistributedTokens": "1499.9999904",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "7.3103099209e-8",
        "borrowerCount": 261,
        "cashTokens": "0.105662880026401893",
        "collateralFactor": 0.8,
        "exchangeRateVTokens": "12.34263792471376930792",
        "isCollateralOfUser": true,
        "liquidityCents": "2269.139464396223447322223722",
        "reserveFactor": 0.25,
        "reserveTokens": "34415.359297941913897345",
        "supplierCount": 1700,
        "supplyApyPercentage": "87.24219968627402",
        "supplyBalanceCents": "8282841765.51712892855171530689666104",
        "supplyBalanceTokens": "385691.99006037251840106076",
        "supplyCapTokens": undefined,
        "supplyDistributions": [
          {
            "apyPercentage": "2.3597132480044802",
            "dailyDistributedTokens": "1499.9999904",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "5.9719560501e-8",
        "tokenPriceCents": "21475.275554",
        "userBorrowBalanceCents": "1507200562.34337075516290466079759",
        "userBorrowBalanceTokens": "70183.060447978210615835",
        "userPercentOfLimit": 10.81,
        "userSupplyBalanceCents": "7153834234.921780428502293762497558",
        "userSupplyBalanceTokens": "333119.554947424281534427",
        "userWalletBalanceCents": "804.0192840488722",
        "userWalletBalanceTokens": "0.0374393",
        "vToken": {
          "address": "0x2E7222e51c0f6e98610A1543Aa3836E092CDe62c",
          "decimals": 8,
          "symbol": "vBNB",
          "underlyingToken": {
            "address": "0x0000000000000000000000000000000000000000",
            "asset": "/src/libs/tokens/img/bnb.svg",
            "decimals": 18,
            "isNative": true,
            "symbol": "BNB",
          },
        },
      },
      {
        "borrowApyPercentage": "14.678237213106993",
        "borrowBalanceCents": "127494789.976725601230307532916064",
        "borrowBalanceTokens": "361325.374254367115070152",
        "borrowCapTokens": "270000",
        "borrowDistributions": [
          {
            "apyPercentage": "0",
            "dailyDistributedTokens": "0",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "1.3031372027e-8",
        "borrowerCount": 77,
        "cashTokens": "2300786.088596467449092226",
        "collateralFactor": 0.6,
        "exchangeRateVTokens": "48.11796090116306607589",
        "isCollateralOfUser": true,
        "liquidityCents": "811839577.423293023548242500951832",
        "reserveFactor": 0.25,
        "reserveTokens": "24426.24486633871943155",
        "supplierCount": 326,
        "supplyApyPercentage": "1.4173055905260634",
        "supplyBalanceCents": "930715490.39593208582245151364324",
        "supplyBalanceTokens": "2637685.21798449584350707",
        "supplyCapTokens": undefined,
        "supplyDistributions": [
          {
            "apyPercentage": "0",
            "dailyDistributedTokens": "0",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "1.338834523e-9",
        "tokenPriceCents": "352.853132",
        "userBorrowBalanceCents": "0",
        "userBorrowBalanceTokens": "0",
        "userPercentOfLimit": 0,
        "userSupplyBalanceCents": "358170693.46469177600488881036144",
        "userSupplyBalanceTokens": "1015070.18354790110239092",
        "userWalletBalanceCents": "1974853275.785316380184811695133004",
        "userWalletBalanceTokens": "5596813.792162446726375697",
        "vToken": {
          "address": "0x6d6F697e34145Bb95c54E77482d97cc261Dc237E",
          "decimals": 8,
          "symbol": "vXVS",
          "underlyingToken": {
            "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
            "asset": "/src/libs/tokens/img/xvs.svg",
            "decimals": 18,
            "symbol": "XVS",
          },
        },
      },
      {
        "borrowApyPercentage": "12.929398759456245",
        "borrowBalanceCents": "2189606786.6192461112257626",
        "borrowBalanceTokens": "13355.332641776432517388",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "1.4813202523229263",
            "dailyDistributedTokens": "250.0000128",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "1.1568959578e-8",
        "borrowerCount": 51,
        "cashTokens": "0.862760988737629408",
        "collateralFactor": 0.8,
        "exchangeRateVTokens": "41.89012550143102255692",
        "isCollateralOfUser": false,
        "liquidityCents": "141449.6641035343414416",
        "reserveFactor": 0.1,
        "reserveTokens": "212.852150854368890484",
        "supplierCount": 211,
        "supplyApyPercentage": "11.761843113429581",
        "supplyBalanceCents": "2154851126.1507758655837335175",
        "supplyBalanceTokens": "13143.34325191080125394165",
        "supplyCapTokens": undefined,
        "supplyDistributions": [
          {
            "apyPercentage": "1.5053909671967736",
            "dailyDistributedTokens": "250.0000128",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "1.0580000116e-8",
        "tokenPriceCents": "163950",
        "userBorrowBalanceCents": "4183840.15655389583477625",
        "userBorrowBalanceTokens": "25.519000649917022475",
        "userPercentOfLimit": 0.03,
        "userSupplyBalanceCents": "0",
        "userSupplyBalanceTokens": "0",
        "userWalletBalanceCents": "14100032453.0672534166492135",
        "userWalletBalanceTokens": "86002.02777107199400213",
        "vToken": {
          "address": "0x162D005F0Fff510E54958Cfc5CF32A3180A84aab",
          "decimals": 8,
          "symbol": "vETH",
          "underlyingToken": {
            "address": "0x98f7A83361F7Ac8765CcEBAB1425da6b341958a7",
            "asset": "/src/libs/tokens/img/eth.svg",
            "decimals": 18,
            "isNative": true,
            "symbol": "ETH",
          },
        },
      },
      {
        "borrowApyPercentage": "4.99318031366e-7",
        "borrowBalanceCents": "1.00013156763973925145e-14",
        "borrowBalanceTokens": "100.013156763973925145",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "1000000",
            "dailyDistributedTokens": "25.0000000000000128",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "4.75e-16",
        "borrowerCount": 2,
        "cashTokens": "1000014902.000227060658744583",
        "collateralFactor": 0,
        "exchangeRateVTokens": "49.8409052160961750676",
        "isCollateralOfUser": false,
        "liquidityCents": "1.000014902000227060658744583e-7",
        "reserveFactor": 0.2,
        "reserveTokens": "0.002676765141333725",
        "supplierCount": 5,
        "supplyApyPercentage": "0",
        "supplyBalanceCents": "1.00001500201070705929733581893e-7",
        "supplyBalanceTokens": "1000015002.01070705929733581893",
        "supplyCapTokens": "0",
        "supplyDistributions": [
          {
            "apyPercentage": "1000000",
            "dailyDistributedTokens": "25.0000000000000128",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "0",
        "tokenPriceCents": "1e-16",
        "userBorrowBalanceCents": "0",
        "userBorrowBalanceTokens": "0",
        "userPercentOfLimit": 0,
        "userSupplyBalanceCents": "0",
        "userSupplyBalanceTokens": "0",
        "userWalletBalanceCents": "0",
        "userWalletBalanceTokens": "0",
        "vToken": {
          "address": "0xF206af85BC2761c4F876d27Bd474681CfB335EfA",
          "decimals": 8,
          "symbol": "vUST",
          "underlyingToken": {
            "address": "0x5A79efD958432E72211ee73D5DDFa9bc8f248b5F",
            "asset": "/src/libs/tokens/img/ust.svg",
            "decimals": 18,
            "symbol": "UST",
          },
        },
      },
      {
        "borrowApyPercentage": "2.0200781032592374",
        "borrowBalanceCents": "0",
        "borrowBalanceTokens": "0",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "1000000",
            "dailyDistributedTokens": "37.5000000000000192",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "1.902587519e-9",
        "borrowerCount": 0,
        "cashTokens": "10103376",
        "collateralFactor": 0,
        "exchangeRateVTokens": "0.5",
        "isCollateralOfUser": false,
        "liquidityCents": "1.0103376e-9",
        "reserveFactor": 0.25,
        "reserveTokens": "0",
        "supplierCount": 3,
        "supplyApyPercentage": "0",
        "supplyBalanceCents": "1.0103376e-9",
        "supplyBalanceTokens": "10103376",
        "supplyCapTokens": "0",
        "supplyDistributions": [
          {
            "apyPercentage": "1000000",
            "dailyDistributedTokens": "37.5000000000000192",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "0",
        "tokenPriceCents": "1e-16",
        "userBorrowBalanceCents": "0",
        "userBorrowBalanceTokens": "0",
        "userPercentOfLimit": 0,
        "userSupplyBalanceCents": "0",
        "userSupplyBalanceTokens": "0",
        "userWalletBalanceCents": "0",
        "userWalletBalanceTokens": "0",
        "vToken": {
          "address": "0x9C3015191d39cF1930F92EB7e7BCbd020bCA286a",
          "decimals": 8,
          "symbol": "vLUNA",
          "underlyingToken": {
            "address": "0xf36160EC62E3B191EA375dadfe465E8Fa1F8CabB",
            "asset": "/src/libs/tokens/img/luna.svg",
            "decimals": 6,
            "symbol": "LUNA",
          },
        },
      },
    ],
    "comptrollerAddress": "0xa258a693A403b7e98fd05EE9e1558C760308cFC7",
    "description": "Fake pool description",
    "isIsolated": false,
    "name": "Fake pool name",
    "userBorrowBalanceCents": "5760676620.076618095782139262953044",
    "userBorrowLimitCents": "13936988877.014289177436902303005152",
    "userSupplyBalanceCents": "17510778769.6340344157973500813468",
  },
}
`;

exports[`getLegacyPool > returns core pool in the correct format 1`] = `
{
  "pool": {
    "assets": [
      {
        "borrowApyPercentage": "2.020093454326921",
        "borrowBalanceCents": "1531484732509246.5984849465",
        "borrowBalanceTokens": "15314985159958.905615",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "0.000004204786496764",
            "dailyDistributedTokens": "499.9999968",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "1.902601834e-9",
        "borrowerCount": 232,
        "cashTokens": "10177700134473657708.145832",
        "collateralFactor": 0.81,
        "exchangeRateVTokens": "47.12928160687045990827",
        "isCollateralOfUser": true,
        "liquidityCents": "1.0177608535172447445226458687512e+21",
        "reserveFactor": 0.1,
        "reserveTokens": "895077567957714.356605",
        "supplierCount": 638,
        "supplyApyPercentage": "0.000002707894064535",
        "supplyBalanceCents": "1.017672878050748282876538601630879295798481873e+21",
        "supplyBalanceTokens": "10176820371890829846.23400212232789390903",
        "supplyCapTokens": undefined,
        "supplyDistributions": [
          {
            "apyPercentage": "8.104628e-12",
            "dailyDistributedTokens": "499.9999968",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "2.576e-15",
        "tokenPriceCents": "99.9991",
        "userBorrowBalanceCents": "1025.9446664149",
        "userBorrowBalanceTokens": "10.259539",
        "userPercentOfLimit": 0,
        "userSupplyBalanceCents": "0",
        "userSupplyBalanceTokens": "0",
        "userWalletBalanceCents": "2132727770.8442098979",
        "userWalletBalanceTokens": "21327469.655669",
        "vToken": {
          "address": "0xD5C4C2e2facBEB59D0216D0595d63FcDc6F9A1a7",
          "decimals": 8,
          "symbol": "vUSDC",
          "underlyingToken": {
            "address": "0x16227D60f7a0e586C66B005219dfc887D13C9531",
            "asset": "/src/libs/tokens/img/usdc.svg",
            "decimals": 6,
            "symbol": "USDC",
          },
        },
      },
      {
        "borrowApyPercentage": "2.0200781032592374",
        "borrowBalanceCents": "3485089196.568960612289",
        "borrowBalanceTokens": "34852739.509411",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "1.8648777370665615",
            "dailyDistributedTokens": "499.9999968",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "1.902587519e-9",
        "borrowerCount": 315,
        "cashTokens": "1.0000736633870942714346486469034873074965e+34",
        "collateralFactor": 0.8,
        "exchangeRateVTokens": "49.8066352191466231613",
        "isCollateralOfUser": false,
        "liquidityCents": "1.000020649482198121567319896178714953634329610535e+36",
        "reserveFactor": 0.1,
        "reserveTokens": "90239.46739",
        "supplierCount": 736,
        "supplyApyPercentage": "0",
        "supplyBalanceCents": "1.0000206494821981215674308946489344879323086222609070040463539e+36",
        "supplyBalanceTokens": "1.00007366338709427143475965125804767703966849508783161e+34",
        "supplyCapTokens": undefined,
        "supplyDistributions": [
          {
            "apyPercentage": "0",
            "dailyDistributedTokens": "499.9999968",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "0",
        "tokenPriceCents": "99.994699",
        "userBorrowBalanceCents": "2910453779.083287189529",
        "userBorrowBalanceTokens": "29106080.704171",
        "userPercentOfLimit": 20.88,
        "userSupplyBalanceCents": "0",
        "userSupplyBalanceTokens": "0",
        "userWalletBalanceCents": "9.99936990530102198515010885786122152e+23",
        "userWalletBalanceTokens": "9.999900000000021986315603448e+21",
        "vToken": {
          "address": "0xb7526572FFE56AB9D7489838Bf2E18e3323b441A",
          "decimals": 8,
          "symbol": "vUSDT",
          "underlyingToken": {
            "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
            "asset": "/src/libs/tokens/img/usdt.svg",
            "decimals": 6,
            "symbol": "USDT",
          },
        },
      },
      {
        "borrowApyPercentage": "2.0200781054088957",
        "borrowBalanceCents": "24169165020757.008441931257037560073982",
        "borrowBalanceTokens": "241756764974.648356207573518227",
        "borrowCapTokens": "1e-18",
        "borrowDistributions": [
          {
            "apyPercentage": "0",
            "dailyDistributedTokens": "0",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "1.902587521e-9",
        "borrowerCount": 533,
        "cashTokens": "1.00000000081005191374669097434774150829e+21",
        "collateralFactor": 0.8,
        "exchangeRateVTokens": "49.19405324154271215086",
        "isCollateralOfUser": true,
        "liquidityCents": "9.997306608098337343642424406007106875921571714e+22",
        "reserveFactor": 1,
        "reserveTokens": "144641814.793335107336610818",
        "supplierCount": 2235,
        "supplyApyPercentage": "0",
        "supplyBalanceCents": "9.997306610513807812587592904169392833357345287278e+22",
        "supplyBalanceTokens": "1.00000000105166403645033682413715238395883e+21",
        "supplyCapTokens": "0",
        "supplyDistributions": [
          {
            "apyPercentage": "0",
            "dailyDistributedTokens": "0",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "0",
        "tokenPriceCents": "99.973066",
        "userBorrowBalanceCents": "1338837412.548739840355458352155454",
        "userBorrowBalanceTokens": "13391981.121682712425319219",
        "userPercentOfLimit": 9.6,
        "userSupplyBalanceCents": "9998773841.247562211290167508487802",
        "userSupplyBalanceTokens": "100014676.365407881071589497",
        "userWalletBalanceCents": "991176944992.458190249853510306844198",
        "userWalletBalanceTokens": "9914439805.141698767644612503",
        "vToken": {
          "address": "0x08e0A5575De71037aE36AbfAfb516595fE68e5e4",
          "decimals": 8,
          "symbol": "vBUSD",
          "underlyingToken": {
            "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
            "asset": "/src/libs/tokens/img/busd.svg",
            "decimals": 18,
            "symbol": "BUSD",
          },
        },
      },
      {
        "borrowApyPercentage": "115.47009997593621",
        "borrowBalanceCents": "9021918820.590883118756440045847812",
        "borrowBalanceTokens": "420107.243695434405914978",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "2.164334566357984",
            "dailyDistributedTokens": "1499.9999904",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "7.3103099209e-8",
        "borrowerCount": 261,
        "cashTokens": "0.105662880026401893",
        "collateralFactor": 0.8,
        "exchangeRateVTokens": "12.34263792471376930792",
        "isCollateralOfUser": true,
        "liquidityCents": "2269.139464396223447322223722",
        "reserveFactor": 0.25,
        "reserveTokens": "34415.359297941913897345",
        "supplierCount": 1700,
        "supplyApyPercentage": "87.24219968627402",
        "supplyBalanceCents": "8282841765.51712892855171530689666104",
        "supplyBalanceTokens": "385691.99006037251840106076",
        "supplyCapTokens": undefined,
        "supplyDistributions": [
          {
            "apyPercentage": "2.3597132480044802",
            "dailyDistributedTokens": "1499.9999904",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "5.9719560501e-8",
        "tokenPriceCents": "21475.275554",
        "userBorrowBalanceCents": "1507200562.34337075516290466079759",
        "userBorrowBalanceTokens": "70183.060447978210615835",
        "userPercentOfLimit": 10.81,
        "userSupplyBalanceCents": "7153834234.921780428502293762497558",
        "userSupplyBalanceTokens": "333119.554947424281534427",
        "userWalletBalanceCents": "804.0192840488722",
        "userWalletBalanceTokens": "0.0374393",
        "vToken": {
          "address": "0x2E7222e51c0f6e98610A1543Aa3836E092CDe62c",
          "decimals": 8,
          "symbol": "vBNB",
          "underlyingToken": {
            "address": "0x0000000000000000000000000000000000000000",
            "asset": "/src/libs/tokens/img/bnb.svg",
            "decimals": 18,
            "isNative": true,
            "symbol": "BNB",
          },
        },
      },
      {
        "borrowApyPercentage": "14.678237213106993",
        "borrowBalanceCents": "127494789.976725601230307532916064",
        "borrowBalanceTokens": "361325.374254367115070152",
        "borrowCapTokens": "270000",
        "borrowDistributions": [
          {
            "apyPercentage": "0",
            "dailyDistributedTokens": "0",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "1.3031372027e-8",
        "borrowerCount": 77,
        "cashTokens": "2300786.088596467449092226",
        "collateralFactor": 0.6,
        "exchangeRateVTokens": "48.11796090116306607589",
        "isCollateralOfUser": true,
        "liquidityCents": "811839577.423293023548242500951832",
        "reserveFactor": 0.25,
        "reserveTokens": "24426.24486633871943155",
        "supplierCount": 326,
        "supplyApyPercentage": "1.4173055905260634",
        "supplyBalanceCents": "930715490.39593208582245151364324",
        "supplyBalanceTokens": "2637685.21798449584350707",
        "supplyCapTokens": undefined,
        "supplyDistributions": [
          {
            "apyPercentage": "0",
            "dailyDistributedTokens": "0",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "1.338834523e-9",
        "tokenPriceCents": "352.853132",
        "userBorrowBalanceCents": "0",
        "userBorrowBalanceTokens": "0",
        "userPercentOfLimit": 0,
        "userSupplyBalanceCents": "358170693.46469177600488881036144",
        "userSupplyBalanceTokens": "1015070.18354790110239092",
        "userWalletBalanceCents": "1974853275.785316380184811695133004",
        "userWalletBalanceTokens": "5596813.792162446726375697",
        "vToken": {
          "address": "0x6d6F697e34145Bb95c54E77482d97cc261Dc237E",
          "decimals": 8,
          "symbol": "vXVS",
          "underlyingToken": {
            "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
            "asset": "/src/libs/tokens/img/xvs.svg",
            "decimals": 18,
            "symbol": "XVS",
          },
        },
      },
      {
        "borrowApyPercentage": "12.929398759456245",
        "borrowBalanceCents": "2189606786.6192461112257626",
        "borrowBalanceTokens": "13355.332641776432517388",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "1.4813202523229263",
            "dailyDistributedTokens": "250.0000128",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "1.1568959578e-8",
        "borrowerCount": 51,
        "cashTokens": "0.862760988737629408",
        "collateralFactor": 0.8,
        "exchangeRateVTokens": "41.89012550143102255692",
        "isCollateralOfUser": false,
        "liquidityCents": "141449.6641035343414416",
        "reserveFactor": 0.1,
        "reserveTokens": "212.852150854368890484",
        "supplierCount": 211,
        "supplyApyPercentage": "11.761843113429581",
        "supplyBalanceCents": "2154851126.1507758655837335175",
        "supplyBalanceTokens": "13143.34325191080125394165",
        "supplyCapTokens": undefined,
        "supplyDistributions": [
          {
            "apyPercentage": "1.5053909671967736",
            "dailyDistributedTokens": "250.0000128",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "1.0580000116e-8",
        "tokenPriceCents": "163950",
        "userBorrowBalanceCents": "4183840.15655389583477625",
        "userBorrowBalanceTokens": "25.519000649917022475",
        "userPercentOfLimit": 0.03,
        "userSupplyBalanceCents": "0",
        "userSupplyBalanceTokens": "0",
        "userWalletBalanceCents": "14100032453.0672534166492135",
        "userWalletBalanceTokens": "86002.02777107199400213",
        "vToken": {
          "address": "0x162D005F0Fff510E54958Cfc5CF32A3180A84aab",
          "decimals": 8,
          "symbol": "vETH",
          "underlyingToken": {
            "address": "0x98f7A83361F7Ac8765CcEBAB1425da6b341958a7",
            "asset": "/src/libs/tokens/img/eth.svg",
            "decimals": 18,
            "isNative": true,
            "symbol": "ETH",
          },
        },
      },
      {
        "borrowApyPercentage": "4.99318031366e-7",
        "borrowBalanceCents": "1.00013156763973925145e-14",
        "borrowBalanceTokens": "100.013156763973925145",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "1000000",
            "dailyDistributedTokens": "25.0000000000000128",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "4.75e-16",
        "borrowerCount": 2,
        "cashTokens": "1000014902.000227060658744583",
        "collateralFactor": 0,
        "exchangeRateVTokens": "49.8409052160961750676",
        "isCollateralOfUser": false,
        "liquidityCents": "1.000014902000227060658744583e-7",
        "reserveFactor": 0.2,
        "reserveTokens": "0.002676765141333725",
        "supplierCount": 5,
        "supplyApyPercentage": "0",
        "supplyBalanceCents": "1.00001500201070705929733581893e-7",
        "supplyBalanceTokens": "1000015002.01070705929733581893",
        "supplyCapTokens": "0",
        "supplyDistributions": [
          {
            "apyPercentage": "1000000",
            "dailyDistributedTokens": "25.0000000000000128",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "0",
        "tokenPriceCents": "1e-16",
        "userBorrowBalanceCents": "0",
        "userBorrowBalanceTokens": "0",
        "userPercentOfLimit": 0,
        "userSupplyBalanceCents": "0",
        "userSupplyBalanceTokens": "0",
        "userWalletBalanceCents": "0",
        "userWalletBalanceTokens": "0",
        "vToken": {
          "address": "0xF206af85BC2761c4F876d27Bd474681CfB335EfA",
          "decimals": 8,
          "symbol": "vUST",
          "underlyingToken": {
            "address": "0x5A79efD958432E72211ee73D5DDFa9bc8f248b5F",
            "asset": "/src/libs/tokens/img/ust.svg",
            "decimals": 18,
            "symbol": "UST",
          },
        },
      },
      {
        "borrowApyPercentage": "2.0200781032592374",
        "borrowBalanceCents": "0",
        "borrowBalanceTokens": "0",
        "borrowCapTokens": undefined,
        "borrowDistributions": [
          {
            "apyPercentage": "1000000",
            "dailyDistributedTokens": "37.5000000000000192",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "borrowPercentageRatePerBlock": "1.902587519e-9",
        "borrowerCount": 0,
        "cashTokens": "10103376",
        "collateralFactor": 0,
        "exchangeRateVTokens": "0.5",
        "isCollateralOfUser": false,
        "liquidityCents": "1.0103376e-9",
        "reserveFactor": 0.25,
        "reserveTokens": "0",
        "supplierCount": 3,
        "supplyApyPercentage": "0",
        "supplyBalanceCents": "1.0103376e-9",
        "supplyBalanceTokens": "10103376",
        "supplyCapTokens": "0",
        "supplyDistributions": [
          {
            "apyPercentage": "1000000",
            "dailyDistributedTokens": "37.5000000000000192",
            "token": {
              "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
              "asset": "/src/libs/tokens/img/xvs.svg",
              "decimals": 18,
              "symbol": "XVS",
            },
            "type": "rewardDistributor",
          },
        ],
        "supplyPercentageRatePerBlock": "0",
        "tokenPriceCents": "1e-16",
        "userBorrowBalanceCents": "0",
        "userBorrowBalanceTokens": "0",
        "userPercentOfLimit": 0,
        "userSupplyBalanceCents": "0",
        "userSupplyBalanceTokens": "0",
        "userWalletBalanceCents": "0",
        "userWalletBalanceTokens": "0",
        "vToken": {
          "address": "0x9C3015191d39cF1930F92EB7e7BCbd020bCA286a",
          "decimals": 8,
          "symbol": "vLUNA",
          "underlyingToken": {
            "address": "0xf36160EC62E3B191EA375dadfe465E8Fa1F8CabB",
            "asset": "/src/libs/tokens/img/luna.svg",
            "decimals": 6,
            "symbol": "LUNA",
          },
        },
      },
    ],
    "comptrollerAddress": "0xa258a693A403b7e98fd05EE9e1558C760308cFC7",
    "description": "Fake pool description",
    "isIsolated": false,
    "name": "Fake pool name",
    "userBorrowBalanceCents": "5760676620.076618095782139262953044",
    "userBorrowLimitCents": "13936988877.014289177436902303005152",
    "userSupplyBalanceCents": "17510778769.6340344157973500813468",
  },
}
`;
